[tool.poetry]
name = "node-modules"
version = "0.0.1-alpha"
description = "Moraj Lab node modules"
authors = ["Morteza Jamali <mortezajamali4241@gmail.com>"]
packages = [
  { include = "scripts" }
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
click = "^8.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
new = "scripts.new:new"
